--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,13 @@
 
     <head>
         <meta charset="utf-8">
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        >
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>React + Redux + TypeScript Application</title>
         <link rel="icon" href="data:,">
     </head>
 
     <body>
-        <main></main>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>
+        <main class="container"></main>
     </body>
 
 </html>
